--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
 
     "react-github-btn": "^1.2.0",
 
+    "react-icons": "^5.3.0",
+
     "react-live": "^2.2.3",
 
     "react-redux": "^7.2.8",
@@ -108,8 +110,6 @@
 
   },
 
- 
-
   "eslintConfig": {
 
     "extends": "react-app"
@@ -141,3 +141,4 @@
   }
 
 }
+
