--- a/package.json
+++ b/package.json
@@ -64,6 +64,8 @@
 
     "react-copy-to-clipboard": "^5.0.3",
 
+    "react-csv": "^2.2.2",
+
     "react-datetime": "^3.0.4",
 
     "react-dom": "^16.13.1",
@@ -81,6 +83,8 @@
     "react-router-hash-link": "^2.3.1",
 
     "react-scripts": "3.4.3",
+
+    "react-toastify": "^10.0.5",
 
     "react-transition-group": "^4.4.1",
 
